--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,7 @@ dependencies {
     compile "com.sparkjava:spark-core:2.6.0"
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.sql2o:sql2o:1.5.4'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 }
